--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -1,38 +1,66 @@
 /* -------------------  MOBILE  --------------------- */
 
 body {
-  display: flex;
-  flex-direction: column;
-  font-family: Arial;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    font-family: Arial;
+    min-height: 100vh;
 }
 
 header {
-  /* header styles */
+    /* header styles */
+}
+#navbar {
+    background-color: #333;
+    overflow: hidden;
+}
+
+#navbar .navbar-item {
+    cursor: pointer;
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+#navbar .navbar-item:hover {
+    cursor: pointer;
+
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+#navbar .navbar-item.active {
+    background-color: #4caf50;
+    color: white;
 }
 
 main {
-  flex: 1;
-  padding: 20px;
+    flex: 1;
+    padding: 20px;
 }
 
 footer {
-  /* footer styles */
+    /* footer styles */
 }
 
 /* -------------------  TABLET  --------------------- */
 @media (min-width: 768px) {
-  /* use mobile */
+    /* use mobile */
 }
 
 /* -------------------  DESKTOP  -------------------- */
 
 @media (min-width: 1224px) {
-  /* use mobile */
+    /* use mobile */
 }
 
 /* -------------------  LARGE SCREENS  -------------- */
 
 @media (min-width: 1824px) {
-  /* use mobile */
+    /* use mobile */
 }
