--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -7,9 +7,10 @@ body {
     min-height: 100vh;
 }
 
-header {
-    /* header styles */
+.greeting {
+    margin: 1rem 0;
 }
+
 #navbar {
     background-color: #333;
     overflow: hidden;
@@ -28,7 +29,6 @@ header {
 /* Change the color of links on hover */
 #navbar .navbar-item:hover {
     cursor: pointer;
-
     background-color: #ddd;
     color: black;
 }
@@ -39,6 +39,14 @@ header {
     color: white;
 }
 
+footer {
+    padding: 1rem;
+    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 main {
     flex: 1;
     padding: 20px;
@@ -46,17 +54,20 @@ main {
 
 .rover-info {
     display: flex;
-    align-items: center;
     flex-direction: column;
 }
 
-.photos {
-    width: 100%;
+.rover-img-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem auto;
+    max-width: 300px;
 }
 
 .rover-img {
     width: 100%;
-
     margin: 1rem auto;
 }
 
@@ -74,17 +85,7 @@ footer {
 @media (min-width: 768px) {
     /* use mobile */
     .rover-img-wrapper {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 1rem auto;
         max-width: 450px;
-    }
-
-    .rover-img {
-        width: 100%;
-        margin: 1rem auto;
     }
 }
 
